@@ -1,3 +1,8 @@
+Tue Jun 24 17:47:41 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/unittests/weight_action.py: Add an attempt to reproduce a
+	  reported segfault.
+
 Tue Jun 24 13:28:21 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* utils/make_xappy_tarballs: Update with latest version numbers.
